k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argus
  labels:
    name: argus
    app: banner-anomaly-detection
